minor change sa .get() method